Fixed bug with wrong height of each block on mobile at homepage.

--- a/src/views/page/Home/components/DescriptionBlock/index.scss
+++ b/src/views/page/Home/components/DescriptionBlock/index.scss
@@ -1,5 +1,5 @@
 .description-section {
-  height: 100vh;
+  min-height: 100vh;
 
   .section-title {
     color: #96c;
