--- a/src/views/page/Home/components/HelpBlock/index.scss
+++ b/src/views/page/Home/components/HelpBlock/index.scss
@@ -1,5 +1,5 @@
 .help-section {
-  height: 100vh;
+  min-height: 100vh;
 
   .section-title {
     color: #ffa260;
