--- a/src/views/page/Home/components/PlaygroundBlock/index.scss
+++ b/src/views/page/Home/components/PlaygroundBlock/index.scss
@@ -1,6 +1,6 @@
 @import "components/SampleWord";
 
-.how-it-works-section {
+.playground-section {
   .section-title {
     color: #ff7f82;
   }
