--- a/src/views/page/Home/components/StatsBlock/index.scss
+++ b/src/views/page/Home/components/StatsBlock/index.scss
@@ -1,5 +1,5 @@
 .stats-section {
-  height: 100vh;
+  min-height: 100vh;
 
   .section-title {
     color: #ef6eae;
